--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
-
+**/output.txt
+**/output.csv
 .vscode/*
 
 ### Go ###
